[gd_scene load_steps=18 format=3 uid="uid://bvdxgmqcnj5mt"]

[ext_resource type="Script" path="res://src/dreams/landscape.gd" id="1_qrb4c"]
[ext_resource type="PackedScene" uid="uid://ncr0xexh7hvh" path="res://src/character/punk.tscn" id="2_c6pc7"]
[ext_resource type="Script" path="res://src/camera/smooth_camera.gd" id="3_ifl30"]
[ext_resource type="PackedScene" uid="uid://5b8m2u3j6jsc" path="res://src/dreams/modules/example_path.tscn" id="3_reqvk"]
[ext_resource type="PackedScene" uid="uid://b7p62x02axg20" path="res://src/dreams/modules/example_path_2.tscn" id="4_74k4o"]
[ext_resource type="Script" path="res://src/dreams/synchronizer.gd" id="6_ymxlo"]

[sub_resource type="Gradient" id="Gradient_ls0gy"]
offsets = PackedFloat32Array(0, 0.484848, 1)
colors = PackedColorArray(0.118847, 0.111775, 0.285156, 1, 0.795412, 0.225495, 0.835938, 1, 1, 0.785476, 0.988876, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fbaia"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4cpvv"]
width = 1024
height = 1024
seamless = true
color_ramp = SubResource("Gradient_ls0gy")
noise = SubResource("FastNoiseLite_fbaia")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a1khi"]
albedo_color = Color(0.505882, 0.65098, 0.768627, 1)
albedo_texture = SubResource("NoiseTexture2D_4cpvv")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_nvgo5"]
material = SubResource("StandardMaterial3D_a1khi")
size = Vector2(100, 100)

[sub_resource type="BoxMesh" id="BoxMesh_43faj"]

[sub_resource type="SphereMesh" id="SphereMesh_a5on8"]

[sub_resource type="BoxMesh" id="BoxMesh_l6cm7"]
size = Vector3(5, 3, 1)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_ipxt3"]

[sub_resource type="Sky" id="Sky_narsk"]
sky_material = SubResource("PhysicalSkyMaterial_ipxt3")

[sub_resource type="Environment" id="Environment_bo1ob"]
background_mode = 2
sky = SubResource("Sky_narsk")

[node name="Example Landscape" type="Node3D"]
script = ExtResource("1_qrb4c")

[node name="Character" parent="." instance=ExtResource("2_c6pc7")]
unique_name_in_owner = true

[node name="CameraPosition" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 2.3)

[node name="CameraTarget" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="SmoothCamera" type="Camera3D" parent="." node_paths=PackedStringArray("target_from", "target_to")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 2.3)
script = ExtResource("3_ifl30")
target_from = NodePath("../CameraPosition")
target_to = NodePath("../CameraTarget")

[node name="FirstModule" parent="." instance=ExtResource("3_reqvk")]
unique_name_in_owner = true
next_module = NodePath("../Example Path 2")

[node name="Example Path 2" parent="." instance=ExtResource("4_74k4o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -10)
next_module = NodePath("../Example Path 3")

[node name="Example Path 3" parent="." instance=ExtResource("3_reqvk")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, -16)

[node name="Synchronizer" type="Node" parent="Example Path 3"]
script = ExtResource("6_ymxlo")

[node name="World" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="World"]
mesh = SubResource("PlaneMesh_nvgo5")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, -2)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, -6)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, -9)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.5, -7)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -2)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, -17)
mesh = SubResource("BoxMesh_43faj")
skeleton = NodePath("../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, -13)
mesh = SubResource("SphereMesh_a5on8")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0.5, -17)
mesh = SubResource("SphereMesh_a5on8")
skeleton = NodePath("../..")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, -19)
mesh = SubResource("SphereMesh_a5on8")
skeleton = NodePath("../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, -13)
mesh = SubResource("SphereMesh_a5on8")
skeleton = NodePath("../..")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.35232, -0.749835, -20.6405)
mesh = SubResource("BoxMesh_l6cm7")
skeleton = NodePath("../..")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 2.47862, 1.5, -19.6033)
mesh = SubResource("BoxMesh_l6cm7")
skeleton = NodePath("../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.762318, -0.185483, 0.620054, -1.86264e-08, 0.958053, 0.286592, -0.647202, 0.218474, -0.730341, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bo1ob")
